--- a/VRChat/42/1301142.html
+++ b/VRChat/42/1301142.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Uw7HFJ+r/8rBN9sHhhhl2P1paxHsv2l98IP5iLSx8i4="></script>
+    "oCTBacQwtbwKm4tXp8l3DOpzsnBmeBhQ8HFtEQ38OoQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シンプルなビニールプール","description":"VRChat向けのシンプルなビニールプールです。\n\n△5884\n\n水は張っていないので各自でどうにかしてください。\nそれ以外のテクスチャは設定済みです。\nUnityにインポートしてすぐ使えます。\n\n改変はどうぞご自由に。\n\nただし、改変の有無に関わらず再配布や販売は禁止します。\n\nお問い合わせ\nTwitter：@Kakino_Soraまでご連絡ください。","url":"https://booth.pm/ja/items/1301142","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ae2219d1-3eb9-4c79-bcb7-e26b4ab16ca4/i/1301142/c1e59ba2-caad-4ca0-9892-9a09747b53f4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Uw7HFJ+r/8rBN9sHhhhl2P1paxHsv2l98IP5iLSx8i4="></script>
+    nonce="oCTBacQwtbwKm4tXp8l3DOpzsnBmeBhQ8HFtEQ38OoQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -339,9 +339,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
