--- a/VRChat/39/1300539.html
+++ b/VRChat/39/1300539.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jSDqJXSno6Kh9EwqO45HlnZ4qaePaS3+JqBmfstsIaU="></script>
+    "3q56wZoJqoT7aGRL4f6snxyqJvlkHrYvTT0wr+1Maos="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセルモデル】悪のロボット　ワルワルカニカニロボV4","description":"最終更新日2019/04/02\n\n\n[性能]～てごわい～\n[特徴]～陸海空で活動可能～\n[製作者]https://www.youtube.com/channel/UCw8V1-vKkEWPzMaIJgMICpw\n\n・概要・\n「悪のロボット　カニカニワルワルロボV4」はこの私クロエのオリジナルボクセルモデルです。\n本モデルの著作権はこの私クロエに帰属するものとします。","url":"https://booth.pm/ja/items/1300539","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/a2a92648-5828-4c7e-841d-4ba2cd74af64/i/1300539/5c241db1-d1ed-4ca9-a8db-8bf46ee056d7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jSDqJXSno6Kh9EwqO45HlnZ4qaePaS3+JqBmfstsIaU="></script>
+    nonce="3q56wZoJqoT7aGRL4f6snxyqJvlkHrYvTT0wr+1Maos="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -604,9 +604,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
