--- a/VRChat/71/1299971.html
+++ b/VRChat/71/1299971.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "y63WdvdCOrmF/n+2H6QI3+pmN/4dpyCCG6VJjJzFjOQ="></script>
+    "x9/t79gSWv8Au1577et2whFnHlvEOsUL6x5RVo+yqaM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"謎生物","description":"白い謎生物です。\nふにゃふにゃしていますので可愛がってあげてください。\n設定済みunitypackageを同梱しておりますのですぐにお迎えできます。\n※当モデルはunityアセットのDynamic Bone使用を想定しています。\n※おまけのきつねverはUVが非常に雑ですのでご了承ください。\n----内容物----\nテクスチャデータ\nfbxファイル\nunitypackageファイル\n--------------\n\n更新履歴\nVer1.71 再配布、ペデスタル使用可能に利用規約を変更しました。\nVer1.71 溶けきつねに異物混入が発覚したので修正しました\nVer1.7　盆踊りが出来ない無力さを知った謎生物は手足を生やす決意を抱きました。\nVer1.6  最近暑いので謎生物は溶けました。\nVer1.5　Looooong謎生物verを追加しました。\nVer1.41 テクスチャ改変用の.psdと.clipを追加しました。\n　　　　ついでに謎きつねのUV展開を「すごく雑」から「雑」まで修正しました。\nVer1.4  きつねverが更新されました。\nVer1.3  blueprintIDを除去しました。\nVer1.2  謎生物UVを整理しました。\nVer1.1  なんかいろいろありました。\nVer1.0  リリース","url":"https://booth.pm/ja/items/1299971","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/d875d3f4-8920-4af1-a105-50d20da95e0c/i/1299971/4792011b-a6fe-4c52-87e5-0ff16f61462c_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y63WdvdCOrmF/n+2H6QI3+pmN/4dpyCCG6VJjJzFjOQ="></script>
+    nonce="x9/t79gSWv8Au1577et2whFnHlvEOsUL6x5RVo+yqaM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -496,9 +496,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
