--- a/VRChat/93/1299893.html
+++ b/VRChat/93/1299893.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "irQ+axSv/FohXaPMj0dU0fqPYDr/BsEmojEf6rL50N0="></script>
+    "B01POAOsnnwVy0N/Vci3G+ZqSAQAj8jn2zKFtDbYVcQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【04/05更新】TOG2重戦車の3Dモデル","description":"一部で有名なイギリス軍の重戦車「TOG2」の3Dモデルです。\n\nvket3に合わせて有料版モデルを完成させました。\n以前からのバージョンは無料版として残しておきます。\n無料版よりも有料版のほうが若干作りこんであります。\n履帯がメッシュになっていてシェイプキーで動かせるのは有料版だけです。\nいずれも外観のみ。内装は存在しないのでお気を付けください。\n\nunitypackageでの配布となります。\n商用利用・私的利用ともに自由です。\nゲーム・映像・静止画等ご自由にどうぞ。\n改変についてもご自由にどうぞ。\n\n本モデルがコンテンツの主体となるような形での再配布・販売はお控えください。\n（基本的にVRChat内での利用に関しては制限はありません。）\n\n・免責事項\n本モデルを使用していかなる損害が発生したとしても、\n制作者（anagot）はいかなる責任も負いません。\n使用は自己責任でお願いします。\n\n・更新履歴\n2019\n04/02　初版\n04/03　unitypackage追加。\n　　　 暫定版テクスチャと履帯が回るシェーダー付き\n05/09　テクスチャを2種追加\n08/08　有料版リリース\n\n2020\n04/05　UVがはみ出ていた部分を修正","url":"https://booth.pm/ja/items/1299893","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/baa79e90-c507-4a8f-8faf-001fe59957c9/i/1299893/32b7938e-9ae7-4723-b517-dff803c01cd4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="irQ+axSv/FohXaPMj0dU0fqPYDr/BsEmojEf6rL50N0="></script>
+    nonce="B01POAOsnnwVy0N/Vci3G+ZqSAQAj8jn2zKFtDbYVcQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -483,9 +483,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
