--- a/VRChat/93/1299193.html
+++ b/VRChat/93/1299193.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "b2NBTDIE+0obI/ByVEqtuTe8JRehJsYxZi1c0tUOkvw="></script>
+    "At1djRdtMt4BCdhVws0896OG3W+v7f0rvCMvHQS5FG4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【３Dモデル】望美【Vroid】","description":"Vroidを使用して制作しています\n\nモデル名は望美です\n\n・Vrmファイルです\n・VRchatへの導入や\n　MMDへの変換はご自身で行ってください\n\n\n再配布禁止\n動画の広告収入などでの商用利用可\n\n不明なことがございましたら肯定ちゃんのTwitterまでご連絡ください。\n","url":"https://booth.pm/ja/items/1299193","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/93b330b0-6f36-4fe2-8e89-b1b60919e662/i/1299193/021464b9-eb3e-4a91-b428-e22b743bb5f5_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="b2NBTDIE+0obI/ByVEqtuTe8JRehJsYxZi1c0tUOkvw="></script>
+    nonce="At1djRdtMt4BCdhVws0896OG3W+v7f0rvCMvHQS5FG4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -531,9 +531,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
