--- a/VRChat/16/1299116.html
+++ b/VRChat/16/1299116.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OoH3AYXLowGQVqXzmdjyAYDevDnH1S/ezgMK5HDxaok="></script>
+    "BUk/9XNJi9Mg2PGtAy5awXVbQaOsZUMRnwMbDLcHdrs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アレッガ自叙伝 ～僕が蕎麦屋の戦闘機になったわけ～","description":"～更新～\nもう4年経ったので無料になりました！\n\nそれ以降のモデリング周りのお話はこちらをどうぞ↓\nウォーパルド航空開発研究所戦闘機開発カタログ\nhttps://ymz80a.booth.pm/items/931983\n\n\nアレッガの技術屋さんが蕎麦屋従業員になった経緯や\nそもそもシューティングゲームに興味を持ったかつらつらと書かれた書籍。\n内容はマッハ新書に近く、自叙伝にも近い。そんなフランクな読み物です。\n\n全13ページ　9749文字","url":"https://booth.pm/ja/items/1299116","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/68ed4d6d-87a6-44fe-a992-b3aec5be9769/i/1299116/555ae19e-e8ed-4882-9ef6-4a75dac92645_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OoH3AYXLowGQVqXzmdjyAYDevDnH1S/ezgMK5HDxaok="></script>
+    nonce="BUk/9XNJi9Mg2PGtAy5awXVbQaOsZUMRnwMbDLcHdrs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -496,9 +496,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
