--- a/VRChat/97/1298597.html
+++ b/VRChat/97/1298597.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2sYsrKoqqoT+PXVm17uY2TRWYFKPDBSPOrqjx48S7pM="></script>
+    "A3dWkRcy+6ByApKKK6SL3Yti4jsR9EKInKLWzpVGXy4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChatワールド用】水銀ミラー","description":"VRChatワールド用 水銀ミラー\n\n使用例\nhttps://twitter.com/onotchi_/status/1118566999477477377\n\n■ 使い方\n\nVRChatワールドのプロジェクトにインポートして使用してください。\nPrefabsフォルダ内にMercuryMirror.prefabがありますのでこれをワールドに配置できます。\n\n■ 仕様\n\n・触れると水銀のように波打つミラーです。\n\n・通常のミラーと比べて負荷が高いので、ワールドに設置する際にはスイッチなどでON/OFF切り替えできるようにすることを推奨します。\n\n■ 利用規約\n\n・本データの解析、改造、再配布、販売を許可します。\n\n・本データをVRChatワールドに配置してアップロードし、VRChatサービス内で使用することを許可します。\n\n・本データをVRChatサービス内で利用している画像、映像の録画、放送を許可します。\n\n・本データの著作権はスズキコジロウに帰属します。\n\n■ 変更履歴\n\n2019/04/01 公開\n","url":"https://booth.pm/ja/items/1298597","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1600"},"image":"https://booth.pximg.net/c/620x620/e553a78a-fc9b-4cf4-a64b-d8291d1ffd82/i/1298597/26a621f4-643a-440b-9397-c2ff8ccd2008_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2sYsrKoqqoT+PXVm17uY2TRWYFKPDBSPOrqjx48S7pM="></script>
+    nonce="A3dWkRcy+6ByApKKK6SL3Yti4jsR9EKInKLWzpVGXy4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -434,9 +434,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
