--- a/VRChat/21/1298321.html
+++ b/VRChat/21/1298321.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bVSNbLXjjLHAX+zU5afETU48QqHSle2ONEguOz1GJhU="></script>
+    "0ByNJNzrzXHmekAAjQfOyubQsN6gCTgjodAvuiAiIPM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル] 新元号「令和」扇子","description":"【紹介】\n新元号「令和」の扇子です\n赤青黄色の3種類のカラーを用意しております。\nせっかくの改元なのでお祭りしていきまっしょい！\n\n【商品内容】\n\n●2019_GengouSensu.unitypackage\n\n・新元号扇子\nGengouSensu_blue.fbx(268△ポリ)\nGengouSensu_red.fbx(268△ポリ)\nGengouSensu_yellow.fbx(268△ポリ)\n\n・上記3つのprefab\n\n・Material\n(スタンダードシェーダのままなのでお好きなシェーダーに変更して使用することをオススメします)\n\n・Textures\n\n●readme\n\n\n【使用に関する注意】\n\n・モデル、テクスチャの改変自由です。\n(もちろんそのまま使っていただいても大丈夫です)\n\n・無償、有償に関わらずデータの再配布は禁止いたします。\n(バーチャルマーケットへの出展ブースに使用する目的で、入稿のための再配布のみ許可致します。)\n\n・VRChat以外の使用(動画やゲーム開発等)に使っていただくことも可能です。\n(作者にご一報いただければ喜んで見に行きます)\n\n・商用利用・R18に関する利用も可能です。\n(作者にご一報いただければ喜んでry)\n\n・著作権については作者(ねこヒゲ)が所持しており、これを放棄していません。\n\n【免責事項】\nモデルデータを使用して発生したいかなる損害・損失・その他不利益等には、当方は一切の責任を負いません\n\n\n【連絡先】\nhttps://twitter.com/NekoHige1119","url":"https://booth.pm/ja/items/1298321","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/1f3f6d70-407d-4a27-b688-9aff37b23ed9/i/1298321/dd09b75d-0558-45e4-b2b5-96bc632cbaaf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bVSNbLXjjLHAX+zU5afETU48QqHSle2ONEguOz1GJhU="></script>
+    nonce="0ByNJNzrzXHmekAAjQfOyubQsN6gCTgjodAvuiAiIPM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -423,9 +423,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
