--- a/VRChat/79/1298179.html
+++ b/VRChat/79/1298179.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "qtLM77RLIy6ZpCZY5Ngi7aI4LcJrJSTOoKgPF+qC2rE="></script>
+    "4ndzyzPMafTxcgjmCpCnm6wUbBGKQ65FM2UTkO7poeg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[生産終了][Discontinued] ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero)","description":"This is Young Raphtalia (ラフタリア) From Rising of the Shield Hero (盾の勇者の成り上がり Tate no Yūsha no Nariagari)\n\nI spend around two or so months working on this and it's finally in a state in which I am happy to say can be sold, I hope you all enjoy!\n\n\nShout-out to UMR/CodeAldnoah for helping with the texture work! ","url":"https://booth.pm/ja/items/1298179","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2200"},"image":"https://booth.pximg.net/c/620x620/d699f819-1a43-4553-8ab4-b5591249ded8/i/1298179/c67ddce8-4c8a-415d-a1b8-4241f88b133b_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qtLM77RLIy6ZpCZY5Ngi7aI4LcJrJSTOoKgPF+qC2rE="></script>
+    nonce="4ndzyzPMafTxcgjmCpCnm6wUbBGKQ65FM2UTkO7poeg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -551,9 +551,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
