--- a/VRChat/36/1298036.html
+++ b/VRChat/36/1298036.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FMbMI0dNRqnvEADgad5fJi6iyxznE09AGn+XQ/UIKEI="></script>
+    "d4nkJ33xY8rufnX37ro5HRV3N5uXQhyViwD9yWkhdUg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[武器]十字軍大剣・Reikspire","description":"十字軍用の(両手剣)ツヴァイヘンダーです\nUSE THIS TO CUT OFF HERETICS' HEAD.\nポリゴン数 ：2880\nTexture originally designed for standard-roughness shader of unity,but compatiable for arktoon shader.\n二次配布、自作発言、商用利用はお止めください\n改変自由 R18/G使用可能\nvrchat使用限\n不明な点や質問などありましたらこちらに連絡ください\nそれでは良きVRCライフを ブラザース！\nNO FURTHER PLAN FOR FIXING ITS PROBLEM.\nI PRESERVE AUTHOURITY.（Supported by Copyright Law of the People's Republic of China）","url":"https://booth.pm/ja/items/1298036","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/753c946e-b3d0-4d99-ad93-71a37cc147a2/i/1298036/4b58c095-cfaa-4505-9efa-29d1af52624b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FMbMI0dNRqnvEADgad5fJi6iyxznE09AGn+XQ/UIKEI="></script>
+    nonce="d4nkJ33xY8rufnX37ro5HRV3N5uXQhyViwD9yWkhdUg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
